# Deep_Research

./: .gitignore  CHANGELOG.md  LICENSE  README-DEV.md  README.md  boost_library.json  config.yml.azure.template  config.yml.openai.template  config.yml.template  pyproject.toml  requirements.ci.txt  requirements.txt  thinkdepthai_deepresearch.ipynb  thinkdepthai_deepresearch.py
docs/demosurveys/: 20260102-005800-gpt-5.1-ai-mc-voice-finance-trust-risks.md
modules/: __init__.py
modules/util/: HTTPDebugger.py
scripts/: build.py  build_and_docker_test.sh  measure-converage-py.py
src/: __init__.py  llm_factory.py  model_config.py  multi_agent_supervisor.py  prompts.py  red_team_evaluator.py  research_agent.py  research_agent_full.py  research_agent_scope.py  search_factory.py  state_scope.py  usage_tracker.py  utils.py
src/deep_research/: __init__.py  llm_factory.py  logging.py  multi_agent_supervisor.py  research_agent.py  search_factory.py  utils.py
src/deep_research/modules/util/: __init__.py  confighelpers.py
src/deep_research/providers/: customsearch.py
tasks/: Investigate_competitors.py  investigate_ragaas.py  main.py
tests/: conftest.py
tests/integration/: test_azure_llm_factory_integration.py  test_openai_backend.py  test_openai_llm_factory_integration.py  test_research_sunny_path_integration.py  test_search_custom_backend_e2e.py
tests/unit/: conftest.py  test_custom_provider.py  test_llm_factory.py  test_search_factory.py  test_utils.py
